<resources>
    <string name="app_name">DistributorStore</string>
    <string name="email_or_username">Email or Username</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="agency_details">Agency Details</string>
    <string name="associated_companies">Associated Companies</string>
    <string name="home">Home</string>
    <string name="contact">Contact</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="waiting_for_acceptance">Waiting for acceptance</string>
    <string name="order_accepted">Order Accepted</string>
    <string name="awaiting_delievery">Awaiting Delievery</string>
    <string name="delivered">Delivered</string>
    <string name="contact_number">Contact Number</string>

    <string name="facebook_app_id">1345668929169586</string>
    <string name="fb_login_protocol_scheme">fb1345668929169586</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>