<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.toyourstore.ui.ui.home.OrderFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_order" >
        <action
            android:id="@+id/action_nav_home_to_orderListFragment"
            app:destination="@id/orderListFragment" />
        <action
            android:id="@+id/action_nav_home_to_pendingPaymentListFragment"
            app:destination="@id/pendingPaymentListFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.toyourstore.ui.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.toyourstore.ui.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/shopDetailsFragment"
        android:name="com.toyourstore.ui.fragment.ShopDetailsFragment"
        android:label="fragment_shop_details"
        tools:layout="@layout/fragment_shop_details" />
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.toyourstore.ui.fragment.SearchFragment"
        android:label="fragment_search"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/searchResultFragment"
        android:name="com.toyourstore.ui.fragment.SearchResultFragment"
        android:label="SearchResultFragment" />
    <fragment
        android:id="@+id/nav_product_details"
        android:name="com.toyourstore.ui.fragment.ProductDetailsFragment"
        android:label="fragment_product_details"
        tools:layout="@layout/fragment_product_details" />
    <fragment
        android:id="@+id/orderListFragment"
        android:name="com.toyourstore.ui.fragment.PendingOrderListFragment"
        android:label="OrderListFragment" >
        <action
            android:id="@+id/action_pending_order_to_order_details"
            app:destination="@+id/orderDetailsFragment">
        </action>
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.toyourstore.ui.fragment.ProfileFragment"
        android:label="fragment_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/orderDetailsFragment"
        android:name="com.toyourstore.ui.fragment.OrderDetailsFragment"
        android:label="fragment_order_details"
        tools:layout="@layout/fragment_order_details" >
        <argument
            android:name="orderitem"
            app:argType="com.toyourstore.model.Order" />
    </fragment>
    <fragment
        android:id="@+id/associatedShopsFragment"
        android:name="com.toyourstore.ui.fragment.AssociatedShopsFragment"
        android:label="fragment_associate_shop"
        tools:layout="@layout/fragment_associate_shop" />
    <fragment
        android:id="@+id/associatedCompaniesFragment"
        android:name="com.toyourstore.ui.fragment.AssociatedCompaniesFragment"
        android:label="fragment_agency_associate_company"
        tools:layout="@layout/fragment_agency_associate_company" />
    <fragment
        android:id="@+id/agencyDetailsFragment"
        android:name="com.toyourstore.ui.fragment.AgencyDetailsFragment"
        android:label="fragment_agency_details"
        tools:layout="@layout/fragment_agency_details" />
    <fragment
        android:id="@+id/inventoryFragment"
        android:name="com.toyourstore.ui.fragment.InventoryFragment"
        android:label="fragment_inverntroy"
        tools:layout="@layout/fragment_inverntroy" />
    <fragment
        android:id="@+id/registerDistributorProcessFragment"
        android:name="com.toyourstore.ui.fragment.RegisterDistributorProcessFragment"
        android:label="fragment_register_distributor"
        tools:layout="@layout/fragment_register_distributor" />
    <fragment
        android:id="@+id/reviewFragment"
        android:name="com.toyourstore.ui.fragment.ReviewFragment"
        android:label="fragment_review"
        tools:layout="@layout/fragment_review" />
    <fragment
        android:id="@+id/registerDistributorComplete"
        android:name="com.toyourstore.ui.fragment.RegisterDistributorComplete"
        android:label="fragment_register_distributor_complete"
        tools:layout="@layout/fragment_register_distributor_complete" />
    <fragment
        android:id="@+id/pendingPaymentListFragment"
        android:name="com.toyourstore.ui.fragment.PendingPaymentListFragment"
        android:label="fragment_payment_list"
        tools:layout="@layout/fragment_payment_list">
        <action
            android:id="@+id/action_payment_list_to_order_details"
            app:destination="@+id/orderDetailsFragment"/>
    </fragment>
    <fragment
        android:id="@+id/salesFragment"
        android:name="com.toyourstore.ui.fragment.SalesFragment"
        android:label="fragment_sales"
        tools:layout="@layout/fragment_sales" />
    <fragment
        android:id="@+id/addSaleFragment"
        android:name="com.toyourstore.ui.fragment.AddSaleFragment"
        android:label="fragment_add_sale"
        tools:layout="@layout/fragment_add_sale" />
    <fragment
        android:id="@+id/operatorFragment"
        android:name="com.toyourstore.ui.fragment.OperatorFragment"
        android:label="fragment_operator"
        tools:layout="@layout/fragment_operator" />


</navigation>